2011-03-01  Felix Ingrand  <felix@cturtle>

	* pu-genom.c added function to add simple type (not expecting array like with GenoM).

2011-02-27  Felix Ingrand  <felix@cturtle>

	* pu-parse-tl.c (PUGetOprsVarArgParameters): Minors changes (e.g. use
	symbol instead of strings).
	(PUGetOprsVarArgParameters): oops... DECLARE_ID is a macro and could
	not be used in this lib. declare_atom will do the same thing.
n
2011-02-26  Felix Ingrand  <felix@cturtle>

	* pu-parse-tl.c (PUGetOprsVarArgParameters): improve the test on the
	argument name

	Here is an example of a more complex usage:

Term *pr2CallPointHeadAction(TermList terms) 
{
  pr2_controllers_msgs::PointHeadGoal goal;

  //This call will parse the arguments, self explanatory... no?
  if (PUGetOprsVarArgParameters(terms, 8,
				set_parameter_or_default_value(goal.pointing_frame, "high_def_frame", STRING),
				set_parameter_or_default_value(goal.target.header.frame_id, "base_link", STRING),
				set_parameter_or_default_value(goal.target.point.x, 5, FLOAT),
				set_parameter_or_default_value(goal.target.point.y, 0, FLOAT),
				set_parameter_or_default_value(goal.target.point.z, 1.2, FLOAT),
				set_parameter_or_default_value(goal.pointing_axis.x, 1.0, FLOAT),
				set_parameter_or_default_value(goal.pointing_axis.y, 0.0, FLOAT),
				set_parameter_or_default_value(goal.pointing_axis.z, 0.0, FLOAT)
				)) {
....
This particular action can now be called with the following goal:
(! (PR2PointHeadAction (VarArg))) 	; we get all the defaults value
(! (PR2PointHeadAction (VarArg (x 3.0) (z 4.0)))) ; this will change 
	; goal.target.point.x to 3.0
	; goal.target.point.z to 4.0
	; Note that it takes the first .x and .z in the list.
	; All others value are set to default.
(! (PR2PointHeadAction (VarArg (pointing_axis.x 1.0) (x 4.0)))) ; this will change
	; goal.pointing_axis.x to 1.0
	; goal.target.point.x to 4.0
	; all others value are set to the default.
	You get the idea...